# robotics_v1

src/robo_collector/robo_collector_controller/config/: params.yaml
src/robo_collector/robo_collector_controller/include/robo_collector_controller/external_api/: CollectorGuiExternalBridge.h
src/robo_collector/robo_collector_controller/src/external_api/: CollectorGuiExternalBridge.cpp
src/robo_miner/robo_miner_task_solver/: CMakeLists.txt  package.xml
src/robo_miner/robo_miner_task_solver/include/robo_miner_task_solver/: FieldPos.h  FloodFill.h  RoboMinerTaskSolver.h
src/robo_miner/robo_miner_task_solver/src/: FieldPos.cpp  FloodFill.cpp  RoboMinerTaskSolver.cpp  main.cpp
